--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: Um pouquinho da minha história na França
+author: Rute Souza
+email: rute@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
+Eu vou lhes contar um pouco da minha experiência de viagem a França, como isso aconteceu. vou falar também sobre os principais desafios que encontrei aqui assim também quais as lições que levo disso tudo.  Venha comigo nessa leitura! :)  line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
 # social links
